[package]
name = "abat_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version = "0.17.3", features = ["native-tls"] }
url = "2.2.2"
json = "0.12.4"
reqwest = { version = "0.11", features = ["blocking"] }